#2980: write only the message's own labels in ufed:Label and add ufed:Reply:quotedMessageLabel for the quoted message labels